// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar ripple normal"
    style={Object {}}
  >
    <Label
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="ui-title title titleDominant"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={9999}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar ripple normal"
    style={Object {}}
  >
    <Label
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="ui-title title titleDominant"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={9999}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test creation of a Title control with default props 1`] = `
<div
  className="ui-title-bar titleBar ripple normal test-class"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleDominant"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={5}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget={null}
    width=""
  />
</div>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleEven"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={1}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetEven normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleEven"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={6}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget={null}
    width=""
  />
</div>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleQuarter"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={0}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetQuarter normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<div
  className="ui-title-bar titleBarStacked ripple normal"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleStacked"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={4}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetStacked normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleThird"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={3}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetThird normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-title title titleThreeQuarter"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={2}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetThreeQuarter normal"
  >
    widget
  </div>
</div>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar normal disabled nohover"
    style={Object {}}
  >
    <Label
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="ui-title title titleDominant"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant disabled nohover"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  title="Test label text"
  visible={false}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar ripple normal invisible"
    style={Object {}}
  >
    <Label
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className="ui-title title titleDominant"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={false}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant invisible"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "layout": 5,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
  "widget": null,
  "width": "",
}
`;
